Bug 590363 - Implement the new input type change algorithm. r=sicking a2.0=blocking